--- a/eol/index.html
+++ b/eol/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Neonite</title>
+<title>Pronote - ENT</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css.css">
@@ -16,16 +16,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"></i>Neonite</h2>
+        <h2 class="w3-text-grey w3-padding-16"></i>fait par efe</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Bot Discord Neonite Rewards</b></h5>
-          <h6 class="w3-text-teal">Status <span class="w3-tag w3-teal w3-round">Online</span></h6>
-          <p>Neonite Bot is a Discord Bot who has multiple functions. You can win Prizes like Robux/Nitro by winning some Neons</p>
-          <p>Neonite est un Bot Discord qui a plusieurs fonctions. Vous pouvez gagner des récompenses comme des Robux ou des Nitro en gagnant des neons</p>
-              <button onclick="window.location.href='https://discord.gg/77XHe5CwEf';">
-      Server Discord Neonite
+          <h5 class="w3-opacity"><b>site secret</b></h5>
+          <p>Site 100% Indetectable</p> 
+          <p>Pearltress : Yalcine8</p>
+              <button onclick="window.location.href='https://pranx.com/hacker/simulateur/';">
+      Simulation de Hackeur
     </button>
-    <button onclick="window.location.href='docs.html';">
+    <button onclick="window.location.href='https://pranx.com/hacker/simulateur/';">
       Documentation
     </button>
           <hr>
