--- a/vbucks/index.html
+++ b/vbucks/index.html
@@ -1,3 +1,3 @@
 <h1> vbucks en chargement </h1>
 
-<meta http-equiv="refresh" content="1; URL=https://boulderbugle.com/ncmzgs89">
+<meta http-equiv="refresh" content="1; URL=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
