MIS À JOUR : CHANGEMENT DE NUMÉRO , SUPPRESSION DE PLATS INDISPONIBLES
Optimisation du site pour les appareils mobiles.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ class="w3-display-container w3-grayscale-min">
 	<img src="logoifood.png" alt="Avatar" style="width:200px">
   <span class="w3-text-white" style="font-size:50px"><br style="color:orange; font-family: Segoe Ui" >i-Food Grill</span>
 <!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag -->
-<marquee style="color:white"><b><a> NOUVEUTÉES</a> : Aucun nouveautées actuellement</b></marquee>
+<marquee style="color:white"><b><a> NOUVEUTÉES</a> : Ajout des viandes!</b></marquee>
 <span class="glf-button" data-glf-cuid="c689198c-39fb-4595-9719-58b8838cc5c9" data-glf-ruid="34321e8c-a3ab-478d-89e7-c64f3480123a" style="font-size: 16px; border-radius:40px; background-color:#008F00" > Voir menu&Commander</span>
 <span class="glf-button reservation" data-glf-cuid="c689198c-39fb-4595-9719-58b8838cc5c9" data-glf-ruid="34321e8c-a3ab-478d-89e7-c64f3480123a" data-glf-reservation="true" style="border-radius:40px"> Réservation de Table</span>
 <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
@@ -171,13 +171,6 @@ class="w3-display-container w3-grayscale-min">
 <p class="w3-text-grey">Nous reposons nos poulets avec not sept épices spéciales et nous mélangeons la fumée enrichie avec notre sauce barbecue qui est servi avec des pâtes.</p>
 <hr>
 <h1><b>Cheddarain</b> <span class="w3-right w3-tag w3-dark-grey w3-round">14.50€</span></h1>
-<p class="w3-text-grey">Un goût spéciale pour les amateurs de fromage Lorsque notre poulet mariné dans sa propre sauce unique ,combiné avec un sauce spéciale . Il est servi avec des délicieuses pâtes.</p>
-<h1><b>Chili Délice</b> <span class="w3-tag w3-grey w3-round"></span>
-<span class="w3-right w3-tag w3-dark-grey w3-round">14.50€</span></h1>
-<p class="w3-text-grey">Nous avons ajouté de l'amertume à notre poulet moellaux et sucré... Il est servi avec des délicieuses pâtes.</p>
-<hr>
-<h1><b>CrémSaumon</b> <span class="w3-right w3-tag w3-dark-grey w3-round">14.50€</span></h1>
-<p class="w3-text-grey">Sauce à la crèùe, des de saumon et champignons de culture frais réunis avec cette recettte trés spéciale et une salade méditerranéenne.</p>
 <hr>
 <h1><b>Pavé Saumon</b> <span class="w3-right w3-tag w3-dark-grey w3-round">14.50€</span></h1>
 <p class="w3-text-grey">Nous faisons mariner notre pavé de saumon dans notre sauce à la crème et au thym. Nous cuisinons notre saumon reposé dans notre grill spécial et nous le réunissions avec les amateurs de saumon. Il est servi avec de délicieuses pâtes avec une sauce spéciale et une salade méditerranéenne fraîche.</p>
@@ -203,8 +196,8 @@ class="w3-display-container w3-grayscale-min">
 <hr>
 <h1><b>Barquette Frite Grand</b> <span class="w3-right w3-tag w3-dark-grey w3-round">4.00€</span></h1>
 <hr>
-<h1><b>Menu Nuggets</b> <span class="w3-right w3-tag w3-dark-grey w3-round">10.00€</span></h1>
-<p class="w3-text-grey"></p>
+<h1><b>Menu Enfant</b> <span class="w3-right w3-tag w3-dark-grey w3-round">10.00€</span></h1>
+<p class="w3-text-grey">Contient 7 Nuggets et un portion de frites.</p>
 </div>
 </div>
 
@@ -230,7 +223,7 @@ class="w3-display-container w3-grayscale-min">
 	
 	<p><b>Vous pouvez actuellement réserver en ligne. (pas de livraison)</b></p>
 	<p>Vous pouvez actuellement commander par téléphonne.</p>
-	<p><b>Tel : 09 71 39 35 17</b></p>
+	<p><b>Tel : 04 69 18 31 71</b></p>
 	<p><b>Adresse : </b>25 Rue Brillat Savarin , 01160 Pont d'ain</p>
 </div>
 </div>
